trying to find solution to transparency issue on safari

--- a/CSS/components/navbarzankyou.css
+++ b/CSS/components/navbarzankyou.css
@@ -10,7 +10,7 @@
 .nav-zankyou {
 	color:White;
 	font-family: "Open Sans", sans-serif;
-	background-color: rgba(17,120,100,1);
+	background-color: rgb(17,120,100);
 	text-align:center;
 	padding: 0px 0px 6px 0px;
 	margin: 0;
